test/libsolidity/syntaxTests/dataLocations/libraries/library_public_function_return_parameters_no_data_location.sol
library L {
    function h(uint[]) public pure {}
}
// ----
// TypeError: (27-33): Location must be specified as "memory" for parameters in publicly visible functions.
